2003-10-25  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Fixed validation for scripts so that it will work when scripts are called
     programmatically and/or from unit tests (e.g. without a REQUEST)

   * Added missing initial self.validators and self.actions to 
     ControllerPythonScripts

2003-10-24  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Modified the getError/setError methods in FormControllerState to be more
     tolerant of non-i18ned error messages.

   * Updated info about CMF 1.3 installation thanks to more info from Laurent
     Mallet (Ellis).

   * Documented CallProfiler patch (thanks to Andy McKay = andym)

   * Added patch to make debugging work properly in Wing IDE (may require
     patches to CMFCore, too).  Thanks to Stephan Deibel.

2003-10-23  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Laurent Mallet informs me that to make CMFFormController work with CMF 1.3.x,
     you need to copy FSPythonScript from CMF 1.4.x's CMFCore directory to
     CMF 1.3.x's CMFCore directlry.  Updated README.txt

2003-10-21  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Added better error handling for validation.  Make sure validators are
     really CMFFormController validators (weird things happen if not), make sure
     validators can be found.

2003-10-20  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Added nicer methods for programmatically adding actions and validators

2003-10-18  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Improved error handling for errors in traverse_to

2003-10-17  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Added documentation into ZMI tab

   * Moved documentation text on ZMI forms to reduce need to scroll

2003-10-15  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Fixed metadata type for Controller Validators

   * Added validators and UI for validators to python scripts

2003-10-08  Geoff Davis <geoff@geoffdavis.net> (plonista)

   * Added a missing import to Script.py
