@@ -13,9 +13,10 @@ class TraverseTo(BaseFormAction):
         REQUEST = controller_state.getContext().REQUEST
         for (key, value) in controller_state.kwargs.items():
             REQUEST.set(key, value)
-        obj = controller_state.getContext().restrictedTraverse(url)
-        if obj is None:
+        # make sure target exists
+        if not hasattr(obj, url):
             raise ValueError, 'Unable to find %s\n' % str(url)
+        obj = controller_state.getContext().restrictedTraverse(url)
         return mapply(obj, REQUEST.args, REQUEST,
                                call_object, 1, missing_name, dont_publish_class,
                                REQUEST, bind=1)
