@@ -1,1 +1,1 @@
-1.0-beta4
+1.0-beta6
